# DigitalGov-RAG-PoC

./: .gitignore  README.md  README_en.md  README_jp.md  config.py  pyproject.toml
data_pipeline/: scraper.py
infra/neo4j/: docker-compose.yml
tests/: test_scraper.py
