[tool.poetry]
name = "digitalgov-rag-poc"
version = "0.1.0"
description = ""
authors = ["nahrun1682 <kawamura100995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
langfuse = "^3.1.2"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
